optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_default_export.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';
import { sibling } from './sibling';

export default component$(() => {
	return (
		<div onClick$={() => console.log(mongodb, sibling)}>
		</div>
	);
});

============================= src/routes/_repl/[id]/[[...slug]].js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_9bPxInzOIxw = ()=>import("./[[...slug]].tsx_[[...slug]].tsx_component_9bPxInzOIxw");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_9bPxInzOIxw, "[[...slug]].tsx_component_9bPxInzOIxw"));


None
============================= src/routes/_repl/[id]/[[...slug]].tsx_[[...slug]].tsx_component_9bPxInzOIxw.js (ENTRY POINT)==

import { _jsxSorted, qrl } from "@qwik.dev/core";
const i_onClick = ()=>import("./[[...slug]].tsx");
export const [[...slug]].tsx_component_9bPxInzOIxw = ()=>{
	return /*#__PURE__*/ _jsxSorted("div", { on:click: /*#__PURE__*/ qrl(i_onClick, "component_div_onClick") }, null, null, 3, null);
};


None
/*
{
  "origin": "src/routes/_repl/[id]/[[...slug]].tsx",
  "name": "[[...slug]].tsx_component_9bPxInzOIxw",
  "entry": "./src/routes/_repl/[id]/[[...slug]].tsx_entry_component$",
  "displayName": "[[...slug]].tsx_component",
  "hash": "9bPxInzOIxw",
  "canonicalFilename": "[[...slug]].tsx_[[...slug]].tsx_component_9bPxInzOIxw",
  "path": "src/routes/_repl/[id]",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    109,
    196
  ]
}
*/
== DIAGNOSTICS ==

[]
