optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_default_export_index.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export default component$(() => {
	return (
		<div onClick$={() => console.log(mongodb)}>
		</div>
	);
});

============================= src/components/mongo/index.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_Dke0F2YikK4 = ()=>import("./index.tsx_mongo_component_Dke0F2YikK4");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_Dke0F2YikK4, "mongo_component_Dke0F2YikK4"));


None
============================= index.tsx_mongo_component_Dke0F2YikK4.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
const i_onClick = ()=>import("./index.tsx");
export const mongo_component_Dke0F2YikK4 = ()=>{
	return <div on:click={/*#__PURE__*/ qrl(i_onClick, "mongo_component_div_onClick")}>
		</div>;
};


None
/*
{
  "origin": "src/components/mongo/index.tsx",
  "name": "mongo_component_Dke0F2YikK4",
  "entry": "entry_segments",
  "displayName": "index.tsx_mongo_component",
  "hash": "Dke0F2YikK4",
  "canonicalFilename": "index.tsx_mongo_component_Dke0F2YikK4",
  "path": "src/components/mongo",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    72,
    150
  ]
}
*/
== DIAGNOSTICS ==

[]
