optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_default_export_invalid_ident.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export default component$(() => {
	return (
		<div onClick$={() => console.log(mongodb)}>
		</div>
	);
});

============================= src/components/mongo/404.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_zRvoWc98eqo = ()=>import("./404.tsx__404_component_zRvoWc98eqo");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_zRvoWc98eqo, "_404_component_zRvoWc98eqo"));


None
============================= 404.tsx__404_component_zRvoWc98eqo.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
const i_onClick = ()=>import("./404.tsx");
export const _404_component_zRvoWc98eqo = ()=>{
	return <div on:click={/*#__PURE__*/ qrl(i_onClick, "_404_component_div_onClick")}>
		</div>;
};


None
/*
{
  "origin": "src/components/mongo/404.tsx",
  "name": "_404_component_zRvoWc98eqo",
  "entry": null,
  "displayName": "404.tsx__404_component",
  "hash": "zRvoWc98eqo",
  "canonicalFilename": "404.tsx__404_component_zRvoWc98eqo",
  "path": "src/components/mongo",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    72,
    150
  ]
}
*/
== DIAGNOSTICS ==

[]
