optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_derived_signals_children.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore, mutable } from '@qwik.dev/core';

import {dep} from './file';

export const TextContent = component$((props) => {
	return (
		<>
			<div>data-nu: {props['data-nu']}</div>
			<div>class: {props.class}</div>
		</>
	);
});

export const App = component$(() => {
	const signal = useSignal(0);
	const store = useStore({});
	return (
		<>
			<div>text</div>
			<div>{`text`}</div>
			<div>{1}</div>
			<div>{true}</div>
			<div>{`text${12}`}</div>
			<div>{typeof `text${12}` === 'string' ? 12 : 43}</div>
			<div>{signal}</div>
			<div>{signal.value}</div>
			<div>{12 + signal.value}</div>
			<div>{store.address.city.name}</div>
			<div>{store.address.city.name ? 'true' : 'false'}</div>
			<div>{dep}</div>
			<div>{dep.thing}</div>
			<div>{dep.thing + 'stuff'}</div>
			<div>{globalThing}</div>
			<div>{globalThing.thing}</div>
			<div>{globalThing.thing + 'stuff'}</div>
			<div>{signal.value()}</div>
			<div>{signal.value + unknown()}</div>
			<div>{mutable(signal)}</div>
			<div>{signal.value + dep}</div>
		</>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_puSwpKXO7Kg = ()=>import("./test.tsx_TextContent_component_puSwpKXO7Kg");
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
export const TextContent = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_puSwpKXO7Kg, "TextContent_component_puSwpKXO7Kg"));
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


None
============================= test.tsx_TextContent_component_puSwpKXO7Kg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const TextContent_component_puSwpKXO7Kg = (props)=>{
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [/*#__PURE__*/ _jsxSorted("div", null, null, ["data-nu:", props["data-nu"]], 1, null), /*#__PURE__*/ _jsxSorted("div", null, null, ["class:", props.class], 1, null)], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "TextContent_component_puSwpKXO7Kg",
  "entry": "entry_segments",
  "displayName": "test.tsx_TextContent_component",
  "hash": "puSwpKXO7Kg",
  "canonicalFilename": "test.tsx_TextContent_component_puSwpKXO7Kg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    132,
    248
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { dep } from "./file";
import { _jsxSorted, mutable, useStore } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const App_component_ckEPmXZlub0 = ()=>{
	const signal = useSignal(0);
	const store = useStore({});
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
		/*#__PURE__*/ _jsxSorted("div", null, null, "text", 3, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, `text`, 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, 1, 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, true, 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, `text${12}`, 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, typeof `text${12}` === "string" ? 12 : 43, 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, signal, 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, _wrapProp(signal), 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, 12 + signal.value, 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, store.address.city.name, 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, store.address.city.name ? "true" : "false", 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, dep, 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, dep.thing, 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, dep.thing + "stuff", 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, globalThing, 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, globalThing.thing, 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, globalThing.thing + "stuff", 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, signal.value(), 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, signal.value + unknown(), 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, mutable(signal), 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, signal.value + dep, 1, null)
	], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    282,
    1054
  ]
}
*/
== DIAGNOSTICS ==

[]
