optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_derived_signals_cmp.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore, mutable } from '@qwik.dev/core';

import {dep} from './file';
import {Cmp} from './cmp';

export const App = component$(() => {
	const signal = useSignal(0);
	const store = useStore({});
	return (
		<Cmp
			staticText="text"
			staticText2={`text`}
			staticNumber={1}
			staticBoolean={true}
			staticExpr={`text${12}`}
			staticExpr2={typeof `text${12}` === 'string' ? 12 : 43}

			signal={signal}
			signalValue={signal.value}
			signalComputedValue={12 + signal.value}

			store={store.address.city.name}
			storeComputed={store.address.city.name ? 'true' : 'false'}

			dep={dep}
			depAccess={dep.thing}
			depComputed={dep.thing + 'stuff'}

			global={globalThing}
			globalAccess={globalThing.thing}
			globalComputed={globalThing.thing + 'stuff'}


			noInline={signal.value()}
			noInline2={signal.value + unknown()}
			noInline3={mutable(signal)}
			noInline4={signal.value + dep}
		/>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_XumqEURaLxI = ()=>import("./test.tsx_test.tsx_App_component_XumqEURaLxI");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_XumqEURaLxI, "test.tsx_App_component_XumqEURaLxI"));


None
============================= test.tsx_test.tsx_App_component_XumqEURaLxI.js (ENTRY POINT)==

import { Cmp } from "./cmp";
import { dep } from "./file";
import { _jsxSorted, mutable, useStore } from "@qwik.dev/core";
export const test.tsx_App_component_XumqEURaLxI = ()=>{
	const signal = useSignal(0);
	const store = useStore({});
	return _jsxSorted(Cmp, {
		signalValue: _wrapProp(signal),
		signalComputedValue: 12 + signal.value,
		store: store.address.city.name,
		storeComputed: store.address.city.name ? "true" : "false",
		depAccess: dep.thing,
		depComputed: dep.thing + "stuff",
		global: globalThing,
		globalAccess: globalThing.thing,
		globalComputed: globalThing.thing + "stuff",
		noInline: signal.value(),
		noInline2: signal.value + unknown(),
		noInline3: mutable(signal),
		noInline4: signal.value + dep
	}, {
		staticText: "text",
		staticText2: `text`,
		staticNumber: 1,
		staticBoolean: true,
		staticExpr: `text${12}`,
		staticExpr2: typeof `text${12}` === "string" ? 12 : 43,
		signal,
		dep
	}, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_App_component_XumqEURaLxI",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component",
  "hash": "XumqEURaLxI",
  "canonicalFilename": "test.tsx_test.tsx_App_component_XumqEURaLxI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    151,
    933
  ]
}
*/
== DIAGNOSTICS ==

[]
