optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_derived_signals_complext_children.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore, mutable } from '@qwik.dev/core';

import {dep} from './file';

export const App = component$(() => {
	const signal = useSignal(0);
	const store = useStore({});
	return (
		<>
			<ul id="issue-2800-result">
				{Object.entries(store).map(([key, value]) => (
				<li>
					{key} - {value}
				</li>
				))}
			</ul>
		</>
	);
});

============================= test.js ==

import { _jsxSorted, componentQrl, inlinedQrl, useStore } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(()=>{
	const signal = useSignal(0);
	const store = useStore({});
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, /*#__PURE__*/ _jsxSorted("ul", null, { id: "issue-2800-result" }, Object.entries(store).map(([key, value])=>/*#__PURE__*/ _jsxSorted("li", null, null, [
		key,
		"-",
		value
	], 1, null)), 1, null), 3, null);
}, "App_component_ckEPmXZlub0"));


None
== DIAGNOSTICS ==

[]
