optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_dev_mode.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from '@qwik.dev/core';

export const App = component$(() => {
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_XumqEURaLxI = ()=>import("./test.tsx_test.tsx_App_component_XumqEURaLxI");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_XumqEURaLxI, "test.tsx_App_component_XumqEURaLxI"));


None
============================= test.tsx_test.tsx_App_component_XumqEURaLxI.js (ENTRY POINT)==

import { _jsxSorted, qrl } from "@qwik.dev/core";
const i_onClick = ()=>import("./test.tsx");
export const test.tsx_App_component_XumqEURaLxI = ()=>{
	return _jsxSorted(Cmp, null, null, /*#__PURE__*/ _jsxSorted("p", { on:click: /*#__PURE__*/ qrl(i_onClick, "App_component_Cmp_p_onClick") }, { class: "stuff" }, "Hello Qwik", 3, null), 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_App_component_XumqEURaLxI",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XumqEURaLxI",
  "canonicalFilename": "test.tsx_test.tsx_App_component_XumqEURaLxI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    86,
    198
  ]
}
*/
== DIAGNOSTICS ==

[]
