optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_drop_side_effects.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';
import { server$ } from '@qwik.dev/router';
import { clientSupabase } from 'supabase';
import { Client } from 'openai';
import { secret } from './secret';
import { sideEffect } from './secret';

const supabase = clientSupabase();
const dfd = new Client(secret);

(function() {
	console.log('run');
	})();
	(() => {
	console.log('run');
	})();

sideEffect();

export const api = server$(() => {
	supabase.from('ffg').do(dfd);
});

export default component$(() => {
	return (
		<button onClick$={() => await api()}></button>
	)
	});

============================= test.js ==

import { secret, sideEffect } from "./secret";
import { componentQrl, qrl, serverQrl } from "@qwik.dev/core";
import { serverQrl } from "@qwik.dev/router";
import { Client } from "openai";
import { clientSupabase } from "supabase";
const i_qbklcEGqqcY = ()=>import("./test.tsx_test.tsx_api_server_qbklcEGqqcY");
const i_G7jVUwdBFEM = ()=>import("./test.tsx_test.tsx_component_G7jVUwdBFEM");
const supabase = clientSupabase();
const dfd = new Client(secret);
(function() {
	console.log("run");
})();
(()=>{
	console.log("run");
})();
sideEffect();
export const api = /*#__PURE__*/ serverQrl(/*#__PURE__*/ qrl(i_qbklcEGqqcY, "test.tsx_api_server_qbklcEGqqcY", [dfd, supabase]));
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_G7jVUwdBFEM, "test.tsx_component_G7jVUwdBFEM"));


None
============================= test.tsx_test.tsx_component_G7jVUwdBFEM.js (ENTRY POINT)==

import { _jsxSorted, qrl } from "@qwik.dev/core";
const i_onClick = ()=>import("./test.tsx");
export const test.tsx_component_G7jVUwdBFEM = ()=>{
	return /*#__PURE__*/ _jsxSorted("button", { on:click: /*#__PURE__*/ qrl(i_onClick, "component_button_onClick") }, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_component_G7jVUwdBFEM",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "G7jVUwdBFEM",
  "canonicalFilename": "test.tsx_test.tsx_component_G7jVUwdBFEM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    501,
    573
  ]
}
*/
============================= test.tsx_test.tsx_api_server_qbklcEGqqcY.js (ENTRY POINT)==

export const test.tsx_api_server_qbklcEGqqcY = ()=>{
	const [dfd, supabase] = useLexicalScope();
	supabase.from("ffg").do(dfd);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_api_server_qbklcEGqqcY",
  "entry": null,
  "displayName": "test.tsx_api_server",
  "hash": "qbklcEGqqcY",
  "canonicalFilename": "test.tsx_test.tsx_api_server_qbklcEGqqcY",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "server$",
  "captures": true,
  "loc": [
    431,
    471
  ]
}
*/
== DIAGNOSTICS ==

[]
