optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_explicit_ext_no_transpile.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, $, useStyles$ } from '@qwik.dev/core';

export const App = component$((props) => {
	useStyles$('hola');
	return $(() => (
		<div></div>
	));
});

============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_GZvaNEi0pm0 = ()=>import("./test.tsx_App_component_useStyles_GZvaNEi0pm0");
const i_zT40dUYPQNs = ()=>import("./test.tsx_App_component_1_zT40dUYPQNs");
const i_XumqEURaLxI = ()=>import("./test.tsx_App_component_XumqEURaLxI");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_XumqEURaLxI, "App_component_XumqEURaLxI"));


None
============================= test.tsx_App_component_XumqEURaLxI.tsx (ENTRY POINT)==

import { qrl, useStylesQrl } from "@qwik.dev/core";
export const App_component_XumqEURaLxI = (props)=>{
	/*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_GZvaNEi0pm0, "App_component_useStyles_GZvaNEi0pm0"));
	return /*#__PURE__*/ qrl(i_zT40dUYPQNs, "App_component_1_zT40dUYPQNs");
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_XumqEURaLxI",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component",
  "hash": "XumqEURaLxI",
  "canonicalFilename": "test.tsx_App_component_XumqEURaLxI",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    91,
    163
  ]
}
*/
============================= test.tsx_App_component_useStyles_GZvaNEi0pm0.tsx (ENTRY POINT)==

export const App_component_useStyles_GZvaNEi0pm0 = "hola";


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_useStyles_GZvaNEi0pm0",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component_useStyles",
  "hash": "GZvaNEi0pm0",
  "canonicalFilename": "test.tsx_App_component_useStyles_GZvaNEi0pm0",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    116,
    122
  ]
}
*/
============================= test.tsx_App_component_1_zT40dUYPQNs.tsx (ENTRY POINT)==

export const App_component_1_zT40dUYPQNs = ()=><div></div>;


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_1_zT40dUYPQNs",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component_1",
  "hash": "zT40dUYPQNs",
  "canonicalFilename": "test.tsx_App_component_1_zT40dUYPQNs",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    135,
    159
  ]
}
*/
== DIAGNOSTICS ==

[]
